--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 layout: default
 title: Home
 cover: false
-about: 'about.html'
+about: 'about'
+talks: 'talks'
 ---
 
 <header class="main-header {% if page.cover %}" style="background-image: url({{ page.cover }}) {%else%}no-cover{% endif %}">
@@ -20,6 +21,7 @@ about: 'about.html'
             <h2 class="page-description">
                 {% if site.description %} {{ site.description }}. {% endif %}
                 {% if page.about %} <a href='{{ site.baseurl }}{{ page.about }}'> About me </a> {% endif %}
+		{% if page.talks %} <a href='{{ site.baseurl }}{{ page.talks }}'> Talks </a> {% endif %}
             </h2>
         </div>
     </div>
